--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <header class="header">
@@ -28,16 +28,17 @@
               type="text"
               required
               placeholder="Hermione"
+              id="input"
             />
           </div>
           <div class="form__school">
             <span class="form__text">School</span>
             <select class="form__select" name="school" required id="school">
               <option value="" hidden>Choose one</option>
-              <option value="0">Gryffindor</option>
-              <option value="1">Slytherin</option>
-              <option value="2">Hufflepuff</option>
-              <option value="3">Ravenclaw</option>
+              <option value="Gryffindor">Gryffindor</option>
+              <option value="Slytherin">Slytherin</option>
+              <option value="Hufflepuff">Hufflepuff</option>
+              <option value="Ravenclaw">Ravenclaw</option>
             </select>
           </div>
         </form>
@@ -47,67 +48,12 @@
     <main>
       <div class="hero">
         <div class="container">
-          <div class="wrapper">
-            <div class="card">
-              <div class="card__picture">
-                <img
-                  src="img/Rectangle 37.png"
-                  alt="Hero Photo"
-                  width="334"
-                  height="192"
-                  class="card__img"
-                />
-              </div>
-              <div class="info">
-                <h2 class="info__title">Hermione Granger</h2>
-                <p>Actor: Emma Watson</p>
-                <p>Gender: female</p>
-                <p>House: Gryffindor</p>
-                <p>Wand core: dragon heartstring</p>
-                <p>Alive: yes</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card__picture">
-                <img
-                  src="img/Rectangle 37-2.png"
-                  alt="Hero Photo"
-                  width="334"
-                  height="192"
-                  class="card__img"
-                />
-              </div>
-              <div class="info">
-                <h2 class="info__title">Draco Malfoy</h2>
-                <p>Actor: Tom Felton</p>
-                <p>Gender: male</p>
-                <p>House: Slytherin</p>
-                <p>Wand core: unicorn tail-hair</p>
-                <p>Alive: yes</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card__picture">
-                <img
-                  src="img/Rectangle 37.png"
-                  alt="Hero Photo"
-                  width="334"
-                  height="192"
-                  class="card__img"
-                />
-              </div>
-              <div class="info">
-                <h2 class="info__title">Hermione Granger</h2>
-                <p>Actor: Emma Watson</p>
-                <p>Gender: female</p>
-                <p>House: Gryffindor</p>
-                <p>Wand core: dragon heartstring</p>
-                <p>Alive: yes</p>
-              </div>
-            </div>
+          <div class="grid">
+
           </div>
         </div>
       </div>
     </main>
+    <script type="module" src="./script/app.js"></script>
   </body>
 </html>
