add working search

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="form__school">
             <span class="form__text">School</span>
             <select class="form__select" name="school" required id="school">
-              <option value="" hidden>Choose one</option>
+              <option value="">Choose one</option>
               <option value="Gryffindor">Gryffindor</option>
               <option value="Slytherin">Slytherin</option>
               <option value="Hufflepuff">Hufflepuff</option>
