--- a/index.html
+++ b/index.html
@@ -60,13 +60,21 @@
     </svg>
 </header>
 <main>
-    <div class="hero">
+    <section class="hero">
         <div class="container">
             <div class="grid">
 
             </div>
+            <div class="likes">
+                <button class="show-liked btn">
+                    <svg class="show">
+                        <use xlink:href="#like"></use>
+                    </svg>
+                    Show Liked
+                </button>
+            </div>
         </div>
-    </div>
+    </section>
 </main>
 <script type="module" src="./script/app.js"></script>
 </body>
